# finance

./: .gitignore  AUDIT_VALIDITY_AND_FIX_PLAN_2026-05-09.md  IBKR_BOT_INTEGRATION_PLAN.md  INTEGRATED_WORKFLOW_AND_RECOMMENDATION_2026-05-09.md  MINIMAX_401_DIAGNOSIS.md  MISSION.md  MORNING_REPORT.md  NORGATE_WINDOWS_EXPORT.md  README.md  RESEARCH_GRADE_ROADMAP.md  TECHNICAL_RECOMMENDATION_PATH.md  TECHNICAL_V2_ENGINE.md  journal.md  pyproject.toml
briefings/: 2026-05-08.md
prompts/: analyst_fundamentals.v1.md
quant/: __init__.py  __main__.py  allocation.py  allocation_planner.py  audit.py  backtest.py  backtest_diagnostics.py  briefing.py  cli.py  critic.py  data.py  decide.py  execution.py  execution_model.py  experiments.py  factor_diagnostics.py  features.py  metrics.py  monitoring.py  news.py  norgate.py  norgate_simulator.py  orthogonal.py  paper.py  portfolio.py  portfolio_optimizer.py  process.py  recommendations.py  regime.py  reporting.py  research_status.py  simulator.py  stats.py  strategies.py  technical_v2.py  trade_journal.py  ui.py  universe.py  validation.py  validation_purged.py  (+2 more)
quant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: norgate_windows_export.py  setup_norgate_windows.ps1
tests/: test_advanced_research_modules.py  test_allocation.py  test_audit.py  test_backtest.py  test_cli.py  test_data.py  test_decide.py  test_execution.py  test_experiments.py  test_metrics.py  test_news.py  test_norgate.py  test_norgate_simulator.py  test_paper.py  test_portfolio.py  test_recommendations.py  test_reporting.py  (+8 more)
